# agent-fabric

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  REQUIREMENTS.md  docker-compose.yml  install.sh  pyproject.toml  tmp_real_test_config.json
.github/workflows/: build-launcher.yml  ci.yml  release.yml
agent_fabric.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
docs/: ARCHITECTURE.md  BACKENDS.md  BACKLOG.md  CAPABILITIES.md  DECISIONS.md  DESIGN.md  DESIGN_ASSESSMENT.md  ENGINEERING.md  LLM_OPTIONS.md  LOCAL_FIRST_REWORK_PLAN.md  MCP_INTEGRATIONS.md  PLAN.md  README.md  SELF_CONTAINED_LLM.md  STATE.md  VERIFICATION_PASSES.md  VISION.md
examples/: ollama-fast-verify.json  ollama.json
launcher/: Cargo.toml
launcher/src/: config.rs  exec.rs  main.rs  setup.rs  update.rs
scripts/: generate_signing_key.sh  validate_full.py  verify_manual.sh  verify_working.py  verify_working_real.py
src/agent_fabric/: __init__.py
src/agent_fabric.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agent_fabric/application/: __init__.py  execute_task.py  ports.py  recruit.py
src/agent_fabric/config/: __init__.py  capabilities.py  loader.py  schema.py
src/agent_fabric/domain/: __init__.py  models.py
src/agent_fabric/infrastructure/: __init__.py  llm_bootstrap.py  llm_discovery.py  telemetry.py
src/agent_fabric/infrastructure/chat/: __init__.py  _parser.py  fallback.py  generic.py
src/agent_fabric/infrastructure/mcp/: __init__.py  augmented_pack.py  converter.py  session.py
src/agent_fabric/infrastructure/ollama/: client.py
src/agent_fabric/infrastructure/specialists/: __init__.py  base.py  containerised.py  engineering.py  enterprise_research.py  prompts.py  registry.py  research.py
src/agent_fabric/infrastructure/tools/: sandbox.py  web_tools.py
src/agent_fabric/infrastructure/workspace/: __init__.py  run_directory.py  run_index.py  run_log.py  run_reader.py  run_repository.py
src/agent_fabric/interfaces/: cli.py  http_api.py
src/agentic_concierge/: __init__.py
src/agentic_concierge/application/: execute_task.py  json_parsing.py  orchestrator.py  ports.py  recruit.py
src/agentic_concierge/bootstrap/: __init__.py  backend_manager.py  detected.py  first_run.py  model_advisor.py  system_probe.py
src/agentic_concierge/config/: __init__.py  constants.py  features.py  loader.py  schema.py
src/agentic_concierge/domain/: __init__.py  errors.py  models.py
src/agentic_concierge/infrastructure/: llm_discovery.py  telemetry.py
src/agentic_concierge/infrastructure/chat/: __init__.py  _parser.py  fallback.py  generic.py  inprocess.py  vllm.py
src/agentic_concierge/infrastructure/mcp/: __init__.py  augmented_pack.py  session.py
src/agentic_concierge/infrastructure/ollama/: __init__.py  client.py
src/agentic_concierge/infrastructure/specialists/: base.py  containerised.py  engineering.py  enterprise_research.py  prompts.py  registry.py  research.py  tool_defs.py
src/agentic_concierge/infrastructure/tools/: __init__.py  browser_tool.py  file_tools.py  sandbox.py  shell_tools.py  test_runner.py  web_tools.py
src/agentic_concierge/infrastructure/workspace/: __init__.py  run_checkpoint.py  run_directory.py  run_index.py  run_index_chroma.py  run_repository.py
src/agentic_concierge/interfaces/: __init__.py  cli.py  http_api.py
tests/: __init__.py  conftest.py  e2e_config.json  mock_llm_server.py  test_api_auth.py  test_api_rate_limit.py  test_backend_manager.py  test_backends_alignment.py  test_browser_tool.py  test_capabilities.py  test_chat_fallback.py  test_cli_commands.py  test_config.py  test_containerised_pack.py  test_doctor_cli.py  test_engineering_pack_quality.py  test_enterprise_research_pack.py  test_execute_task.py  test_features.py  test_first_run.py  test_generic_client.py  test_inprocess_client.py  test_integration.py  test_json_tools.py  test_llm_bootstrap.py  test_llm_discovery.py  test_logs_cli.py  test_mcp_augmented_pack.py  test_mcp_real_github.py  test_mcp_real_server.py  test_mcp_registry.py  test_mcp_session.py  test_model_advisor.py  test_orchestrate_task.py  test_orchestrator.py  test_packs.py  test_parallel_task_force.py  test_resume.py  test_router.py  test_routing_model.py  (+16 more)
