[project]
name = "agent-fabric"
version = "0.1.0"
description = "A portable, quality-first agent fabric (router + supervisor + specialist packs) that runs on local OpenAI-compatible LLM endpoints."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "jsonschema>=4.21",
  "tenacity>=8.2",
  "trafilatura>=1.7.0",
  "duckduckgo-search>=6.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "mcp>=1.0"]
otel = ["opentelemetry-api>=1.24", "opentelemetry-sdk>=1.24"]
mcp = ["mcp>=1.0"]

[project.scripts]
fabric = "agent_fabric.interfaces.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_fabric*"]
