[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-concierge"
dynamic = ["version"]
description = "An agentic concierge that spawns ephemeral specialist teams to tackle tasks — capability-based routing, multi-pack task forces, and native tool-calling on local or cloud LLM endpoints."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["agents", "llm", "ollama", "mcp", "orchestration", "ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "jsonschema>=4.21",
  "tenacity>=8.2",
  "trafilatura>=1.7.0",
  "duckduckgo-search>=6.1.0",
  "psutil>=5.9",
  "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "mcp>=1.0",
  "pip-audit>=2.7",
  "build>=1.0",
  "twine>=5.0",
  "setuptools-scm>=8",
]
otel = ["opentelemetry-api>=1.24", "opentelemetry-sdk>=1.24"]
mcp = ["mcp>=1.0"]
nano = ["mistralrs>=0.3"]
embed = ["chromadb>=0.4"]
browser = ["playwright>=1.40"]
all = ["agentic-concierge[mcp,otel,embed,browser]"]

[project.scripts]
concierge = "agentic_concierge.interfaces.cli:app"

[project.urls]
Homepage = "https://github.com/ausmarton/agentic-concierge"
Repository = "https://github.com/ausmarton/agentic-concierge"
Issues = "https://github.com/ausmarton/agentic-concierge/issues"
Changelog = "https://github.com/ausmarton/agentic-concierge/blob/main/CHANGELOG.md"

[tool.setuptools_scm]
# Version is derived from the nearest git tag (e.g. v0.1.0 → 0.1.0).
# Untagged commits produce a dev version: 0.1.1.dev3+gabcdef.
# Use SETUPTOOLS_SCM_PRETEND_VERSION when building outside a git tree
# (e.g. in Docker without full history): --build-arg VERSION=0.1.0
fallback_version = "0.0.0.dev0"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentic_concierge*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "real_llm: marks tests that require a live LLM (deselect with -k 'not real_llm')",
    "real_mcp: marks tests that require a real MCP server via npx (deselect with -k 'not real_mcp')",
    "podman: marks tests that require Podman and a pulled container image (deselect with -k 'not podman')",
    "real_browser: marks tests that require Playwright and a browser installation",
    "real_chromadb: marks tests that require chromadb to be installed and writable",
    "launcher: marks tests that exercise the Rust launcher binary (requires a built binary)",
    "docker: marks tests that require Docker and docker-compose",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # Pyflakes
]
ignore = [
  "E501",  # line too long — not enforced at this time
  "E741",  # ambiguous variable name — pre-existing in test helpers
  "F401",  # unused imports — some are intentional re-exports
]

[tool.coverage.run]
source = ["src/agentic_concierge"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
show_missing = true
skip_covered = false
